# mpljourney

./: .gitignore  404.html  MANIFEST.in  README.md  README.qmd  index.html  make.py  mkdocs.yaml  pyproject.toml  setup.py  sitemap.xml
docs/: README.qmd  contributing.md  index.md
docs/reference/: add_digit.md
mpljourney/: __init__.py  main.py
overrides/partials/: footer.html
scripts/: coverage.sh
search/: search_index.json
tests/: test_load_dataset.py  test_main.py
